# alg2

./: Calculadora.h  FuncionarioCaixa.cpp  main.cpp
calculadora/: Calculadora.cpp  Calculadora.h  Empresa.cpp  Empresa.h  FuncionarioCaixa.cpp  FuncionarioCaixa.h  main.cpp
exerc3/: Atleta.cpp  Atleta.h  CMakeLists.txt  Competicao.cpp  Competicao.h  Corredor.cpp  Corredor.h  Data.cpp  Data.h  InformacoesAtleta.cpp  InformacoesAtleta.h  Nadador.cpp  Nadador.h  main.cpp
exerc_fruta/: Banana.cpp  Banana.h  Fruta.cpp  Fruta.h  Melancia.cpp  Melancia.h  main.cpp
exerc_pessoa/: Aluno.cpp  Aluno.h  Pessoa.cpp  Pessoa.h  Programador.cpp  Programador.h  main.cpp
pais/: Pais.cpp  Pais.h  main.cpp
pessoa/: Pessoa.cpp  Pessoa.h  main.cpp
